AG-9558 - Fix flickering of axis button on mouse move

--- a/packages/ag-charts-enterprise/src/features/annotations/axisButton.css
+++ b/packages/ag-charts-enterprise/src/features/annotations/axisButton.css
@@ -10,7 +10,6 @@
     white-space: nowrap;
     z-index: var(--ag-charts-layer-tooltip);
     box-sizing: border-box;
-    pointer-events: none;
 }
 
 .ag-charts-annotations__axis-button-wrapper--hidden {
@@ -25,7 +24,6 @@
     padding: 0;
     color: rgb(71, 71, 71);
     cursor: pointer;
-    pointer-events: all;
 }
 
 .ag-charts-annotations__axis-button-icon {
